# tumugi

./: .gitignore  Cargo.toml  README.md
examples/: basic_agent_usage.rs  chat_completions_api.rs  chatreq_test.rs  conversation_buffer_window_memory.rs  feedback_system_example.rs  multi_agent_system.rs  self_refine_example.rs  use_memory_on_restapi.rs  use_on_restapi.rs
src/: error.rs  lib.rs
src/agent/: base.rs  calculator.rs  mod.rs  task_executor.rs
src/client/: anthropic.rs  client.rs  common.rs  factory.rs  groq.rs  mod.rs  openai.rs
src/feedback_system/: feedback_agent.rs  feedback_system.rs  mod.rs
src/memory/: conversation_buffer_window.rs  mod.rs
src/multi_agent/: commander.rs  mod.rs  sub_agent.rs  system.rs
src/self_refine/: mod.rs  self_refine_agent.rs  self_refine_system.rs
tests/: conversation_memory.rs  integration_test.rs  tests_chat_completions_api.rs  tests_conversation_buffer_window_memory.rs
