[package]
name = "tumugi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A brief description of your library"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "^1.0.207", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.113"
axum = "0.7.5"
